--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "nodemon ./app/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
