--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "passport-local": "^1.0.0",
     "pg": "^8.4.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
