--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
