--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "stream": "^0.0.2"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
